Closed Bug 1648679 Opened 5 years ago Closed 5 years ago

Crash on start-up due to bug 1626362

Categories

(Thunderbird :: General, defect)

defect

Tracking

(thunderbird_esr68 unaffected, thunderbird_esr78 unaffected, thunderbird79 wontfix)

RESOLVED FIXED
Thunderbird 80.0
Tracking Status
thunderbird_esr68 --- unaffected
thunderbird_esr78 --- unaffected
thunderbird79 --- wontfix

People

(Reporter: darktrojan, Assigned: mattwoodrow)

References

Details

Attachments

(1 file)

Bug 1626362 (more specifically this change) changed nsIDocShell.useErrorPages, which we use. Thunderbird now crashes on start-up.

I'm going to comment out the two lines causing the crash, so we can at least get some tests running.

Pushed by geoff@darktrojan.net: https://hg.mozilla.org/comm-central/rev/c29a908bc582 Temporarily prevent start-up crash caused by bug 1626362. rs=bustage-fix

So what do we do now, Matt?

Flags: needinfo?(matt.woodrow)
Keywords: leave-open

What exactly is the crash here?

Is it the CheckOnlyEmbedderCanSet assert?

Flags: needinfo?(matt.woodrow)

It's at mozilla::dom::syncedcontext::Transaction<mozilla::dom::BrowsingContext>::Commit(mozilla::dom::BrowsingContext*)

Here's a sample log I should've provided before: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=307624693&repo=comm-central&lineNumber=893

Flags: needinfo?(matt.woodrow)
Assignee: nobody → matt.woodrow
Status: NEW → ASSIGNED
Pushed by mwoodrow@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a32b5c889735 Allow setting UseErrorPages from the parent process. r=nika
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 80.0
Pushed by geoff@darktrojan.net: https://hg.mozilla.org/comm-central/rev/dcc99ba3b9a1 Backed out changeset c29a908bc582. rs=backout DONTBUILD

Thank you Matt!

Flags: needinfo?(matt.woodrow)

Thanks. esr78 is also affected - being discussed in bug 1626362.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: