Bug 1648679 - Allow setting UseErrorPages from the parent process. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D81484